tests/snapshots/snapshots__budget_humanize_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4066 tokens)

README.md
     1→# humanize
    12→This modest package contains various common humanization utilities, like turning a
    13→number into a fuzzy human-readable duration ("3 minutes ago") or into a human-readable
    14→size or throughput. It is localized to:
    15→
    16→- Arabic
    17→- Basque
    18→- Bengali
    19→- Brazilian Portuguese
    20→- Catalan
    21→- Danish
    22→- Dutch
    23→- Esperanto
    24→- European Portuguese
    25→- Finnish
    26→- French
    27→- German
    28→- Greek
    29→- Hebrew
    30→- Indonesian
    31→- Italian
    32→- Japanese
    33→- Klingon
    34→- Korean
    35→- Norwegian
    36→- Persian
    37→- Polish
    38→- Russian
    39→- Simplified Chinese
    40→- Slovak
    41→- Slovenian
    42→- Spanish
    43→- Swedish
    44→- Turkish
    45→- Ukrainian
    46→- Uzbek
    47→- Vietnamese
    48→
    49→## API reference
    51→[https://humanize.readthedocs.io](https://humanize.readthedocs.io/)
    52→
    53→<!-- usage-start -->
    54→
    55→## Installation
    57→### From PyPI
    59→```bash
    60→python3 -m pip install --upgrade humanize
      →…
    63→### From source
    65→```bash
    66→git clone https://github.com/python-humanize/humanize
      →…
    71→## Usage
    73→### Integer humanization
    75→```pycon
    76→>>> import humanize
      →…
    89→### Date & time humanization
    91→```pycon
    92→>>> import humanize
      →…
   110→### Precise time delta
   112→```pycon
   113→>>> import humanize
      →…
   124→#### Smaller units
   126→If seconds are too large, set `minimum_unit` to milliseconds or microseconds:
   127→
   128→```pycon
   129→>>> import humanize
   130→>>> import datetime as dt
   131→>>> humanize.naturaldelta(dt.timedelta(seconds=2))
   132→'2 seconds'
   133→```
   134→
   135→```pycon
   136→>>> delta = dt.timedelta(milliseconds=4)
   137→>>> humanize.naturaldelta(delta)
   138→'a moment'
   139→>>> humanize.naturaldelta(delta, minimum_unit="milliseconds")
   140→'4 milliseconds'
      →…
   154→### File size humanization
   156→```pycon
   157→>>> import humanize
      →…
   166→### Human-readable floating point numbers
   168→```pycon
   169→>>> import humanize
      →…
   182→### Scientific notation
   184→```pycon
   185→>>> import humanize
      →…
   200→## Localization
   202→How to change locale at runtime:
   203→
   204→```pycon
   205→>>> import humanize
   206→>>> import datetime as dt
   207→>>> humanize.naturaltime(dt.timedelta(seconds=3))
   208→'3 seconds ago'
   209→>>> _t = humanize.i18n.activate("ru_RU")
   210→>>> humanize.naturaltime(dt.timedelta(seconds=3))
   211→'3 секунды назад'
   212→>>> humanize.i18n.deactivate()
   213→>>> humanize.naturaltime(dt.timedelta(seconds=3))
   214→'3 seconds ago'
   215→```
   216→
   217→You can pass additional parameter `path` to `activate` to specify a path to search
   218→locales in.
   219→
   220→```pycon
   221→>>> import humanize
   222→>>> humanize.i18n.activate("xx_XX")
   223→<...>
   224→FileNotFoundError: [Errno 2] No translation file found for domain: 'humanize'
   225→>>> humanize.i18n.activate("pt_BR", path="path/to/my/own/translation/")
   226→<gettext.GNUTranslations instance ...>
   227→```
   228→
   229→<!-- usage-end -->
   230→
   231→How to add new phrases to existing locale files:
   232→
   233→```sh
      →…

RELEASING.md
     1→# Release checklist
     3→- [ ] Get `main` to the appropriate code release state.
      →…

docs/filesize.md
     1→# Filesize
     3→::: humanize.filesize

docs/i18n.md
     1→# Internationalisation
     3→::: humanize.i18n

docs/index.md
     1→# humanize
     3→Welcome to the humanize API reference.
     4→
     5→- [Number](number.md)
     6→- [Time](time.md)
      →…

docs/lists.md
     1→# Lists
     3→::: humanize.lists

docs/number.md
     1→# Number
     3→::: humanize.number

docs/time.md
     1→# Time
     3→::: humanize.time

mkdocs.yml
     1→site_name: humanize
     2→site_url: https://humanize.readthedocs.io
     3→repo_url: https://github.com/python-humanize/humanize
     4→theme:
    16→        name: Switch to light mode
    17→
    18→nav:
    24→  - Internationalisation: i18n.md
    25→
    26→plugins:
    29→  - include-markdown
    30→
    31→markdown_extensions:
    35→  - pymdownx.superfences
    36→
    37→extra_css:
    38→  - css/code_select.css
    39→
    40→watch:

pyproject.toml
     1→[build-system]
     8→[project]
    50→[tool.hatch]
    53→[tool.hatch.build]
    56→[tool.hatch.build.hooks.vcs]
    59→[tool.hatch.version.raw-options]
    62→[tool.ruff]
   103→[tool.pyproject-fmt]
   106→[tool.pytest.ini_options]
   113→[tool.coverage.report]
   120→[tool.mypy]

src/humanize/__init__.py
     5→from humanize.filesize …
     6→from humanize.i18n …
     7→from humanize.lists …
     8→from humanize.number …
    18→from humanize.time …
    26→from ._version import __version__
    28→__all__ = [
    29→    "__version__",
    30→    "activate",
    31→    "apnumber",
      →    …

src/humanize/filesize.py
     5→from math …
    36→def naturalsize(
    37→    value: float | str,
    38→    binary: bool = False,
    39→    gnu: bool = False,
    40→    format: str = "%.1f",
    41→) -> str:
    42→    """Format a number of bytes like a human-readable filesize (e.g. 10 kB).
    43→
      →…

src/humanize/i18n.py
     5→import gettext …
     6→from threading …
     8→TYPE_CHECKING = False
    10→    import os …
    11→    import pathlib …
    13→__all__ = ["activate", "deactivate", "decimal_separator", "thousands_separator"]
    15→_TRANSLATIONS: dict[str | None, gettext_module.NullTranslations] = {
    16→    None: gettext_module.NullTranslations()
    17→}
    18→_CURRENT = local()
    21→# Mapping of locale to thousands separator
    22→_THOUSANDS_SEPARATOR = {
    23→    "de_DE": ".",
      →    …
    30→# Mapping of locale to decimal separator
    31→_DECIMAL_SEPARATOR = {
    32→    "de_DE": ",",
      →    …
    40→def _get_default_locale_path …
    51→def get_translation() -> gettext_module.NullTranslations:
    58→def activate(
    59→    locale: str | None, path: str | os.PathLike[str] | None = None
    60→) -> gettext_module.NullTranslations:
    61→    """Activate internationalisation.
    62→
      →…
    96→def deactivate() -> None:
    97→    """Deactivate internationalisation."""
   101→def _gettext …
   113→def _pgettext …
   129→def _ngettext …
   144→def _gettext_noop …
   163→def _ngettext_noop …
   183→def thousands_separator() -> str:
   184→    """Return the thousands separator for a locale, default to comma.
   185→
      →…
   196→def decimal_separator() -> str:
   197→    """Return the decimal separator for a locale, default to dot.
   198→
      →…

src/humanize/lists.py
     5→TYPE_CHECKING = False
     7→    from typing …
     9→__all__ = ["natural_list"]
    12→def natural_list(items: list[Any]) -> str:
    13→    """Natural list.
    14→
      →…

src/humanize/number.py
     5→import bisect …
     7→from .i18n import _gettext as _
     8→from .i18n import _ngettext, decimal_separator, thousands_separator
     9→from .i18n import _ngettext_noop as NS_
    10→from .i18n import _pgettext as P_
    12→TYPE_CHECKING = False
    14→    from typing …
    21→def _format_not_finite …
    34→def ordinal(value: NumberOrString, gender: str = "male") -> str:
    35→    """Converts an integer to its ordinal as a string.
    36→
      →…
   110→def intcomma(value: NumberOrString, ndigits: int | None = None) -> str:
   111→    """Converts an integer to a string containing commas every three digits.
   112→
      →…
   195→def intword(value: NumberOrString, format: str = "%.1f") -> str:
   196→    """Converts a large integer to a friendly text representation.
   197→
      →…
   269→def apnumber(value: NumberOrString) -> str:
   270→    """Converts an integer to Associated Press style.
   271→
      →…
   321→def fractional(value: NumberOrString) -> str:
   322→    """Convert to fractional number.
   323→
      →…
   385→def scientific(value: NumberOrString, precision: int = 2) -> str:
   386→    """Return number in string scientific notation z.wq x 10ⁿ.
   387→
      →…
   454→def clamp(
   455→    value: float,
   456→    format: str = "{:}",
   457→    floor: float | None = None,
   458→    ceil: float | None = None,
   459→    floor_token: str = "<",
   460→    ceil_token: str = ">",
   461→) -> str:
   462→    """Returns number with the specified format, clamped between floor and ceil.
   463→
      →…
   531→def metric(value: float, unit: str = "", precision: int = 3) -> str:
   532→    """Return a value with a metric SI unit-prefix appended.
   533→
      →…

src/humanize/time.py
     8→from enum …
     9→from functools …
    11→from .i18n import _gettext as _
    12→from .i18n import _ngettext
    13→from .number import intcomma
    15→TYPE_CHECKING = False
    17→    import datetime …
    18→    from collections.abc …
    19→    from typing …
    21→__all__ = [
    22→    "naturaldate",
    23→    "naturalday",
    24→    "naturaldelta",
      →    …
    30→@total_ordering
    31→class Unit(Enum):
    32→    MICROSECONDS = 0
    33→    MILLISECONDS = 1
    34→    SECONDS = 2
    35→    MINUTES = 3
    36→    HOURS = 4
    37→    DAYS = 5
    38→    MONTHS = 6
    39→    YEARS = 7
    40→
    41→    def __lt__(self, other: Any) -> Any:
    47→def _now …
    53→def _abs_timedelta …
    68→def _date_and_delta …
    95→def naturaldelta(
    96→    value: dt.timedelta | float,
    97→    months: bool = True,
    98→    minimum_unit: str = "seconds",
    99→) -> str:
   100→    """Return a natural representation of a timedelta or number of seconds.
   101→
      →…
   249→def naturaltime(
   250→    value: dt.datetime | dt.timedelta | float,
   251→    future: bool = False,
   252→    months: bool = True,
   253→    minimum_unit: str = "seconds",
   254→    when: dt.datetime | None = None,
   255→) -> str:
   256→    """Return a natural representation of a time in a resolution that makes sense.
   257→
      →…
   300→def _convert_aware_datetime …
   311→def naturalday(value: dt.date | dt.datetime, format: str = "%b %d") -> str:
   312→    """Return a natural day.
   313→
      →…
   343→def naturaldate(value: dt.date | dt.datetime) -> str:
   344→    """Like `naturalday`, but append a year for dates more than ~five months away."""
   361→def _quotient_and_remainder …
   406→def _suitable_minimum_unit …
   435→def _suppress_lower_units …
   451→def precisedelta(
   452→    value: dt.timedelta | float | None,
   453→    minimum_unit: str = "seconds",
   454→    suppress: Iterable[str] = (),
   455→    format: str = "%0.2f",
   456→) -> str:
   457→    """Return a precise representation of a timedelta or number of seconds.
   458→
      →…
   654→def _rounding_by_fmt …

tests/test_filesize.py

tests/test_i18n.py
    17→@freeze_time("2020-02-02")
    18→def test_i18n() -> None:
   225→class TestActivate:
   226→    expected_msg = (
   227→        "Humanize cannot determinate the default location of the"
   228→        " 'locale' folder. You need to pass the path explicitly."
   229→    )
   230→
   249→    @freeze_time("2020-02-02")
   250→    def test_en_locale(self) -> None:
   262→    @freeze_time("2020-02-02")
   263→    def test_none_locale(self) -> None:

tests/test_lists.py

tests/test_number.py

tests/test_time.py
    14→ONE_DAY_DELTA = dt.timedelta(days=1)
    16→# In seconds
    17→ONE_MICROSECOND = 1 / 1000000
    18→FOUR_MICROSECONDS = 4 / 1000000
    19→ONE_MILLISECOND = 1 / 1000
    20→FOUR_MILLISECONDS = 4 / 1000
    22→MILLISECONDS_1_337 = 1337 / 1000  # 1.337 seconds
    23→ONE_HOUR = 3600
    24→ONE_DAY = 24 * ONE_HOUR
    25→ONE_YEAR = 365.25 * ONE_DAY
    26→FROZEN_DATE = "2010-02-02"
    37→class FakeDate:
    45→VALUE_ERROR_TEST = FakeDate(290149024, 2, 2)
    46→OVERFLOW_ERROR_TEST = FakeDate(120390192341, 2, 2)
    58→# These are not considered "public" interfaces, but require tests anyway.
    59→
    60→
    61→def test_date_and_delta() -> None:
