tests/snapshots/snapshots__budget_humanize_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (478 words)

README.md
     1→# humanize
    12→This modest package contains various common humanization utilities, like turning a
    13→number into a fuzzy human-readable duration ("3 minutes ago") or into a human-readable
    14→size or throughput. It is localized to:
    15→
    16→- Arabic
    17→- Basque
    18→- Bengali
    19→- Brazilian Portuguese
    20→- Catalan
    21→- Danish
    22→- Dutch
    23→- Esperanto
    24→- European Portuguese
    25→- Finnish
    26→- French
    27→- German
    28→- Greek
    29→- Hebrew
    30→- Indonesian
    31→- Italian
    32→- Japanese
    33→- Klingon
    34→- Korean
    35→- Norwegian
    36→- Persian
    37→- Polish
    38→- Russian
    39→- Simplified Chinese
    40→- Slovak
    41→- Slovenian
    42→- Spanish
    43→- Swedish
    44→- Turkish
    45→- Ukrainian
    46→- Uzbek
    47→- Vietnamese
    48→
    49→## API reference
    51→[https://humanize.readthedocs.io](https://humanize.readthedocs.io/)
    52→
    53→<!-- usage-start -->
    54→
    55→## Installation
    57→### From PyPI
    59→```bash
    60→python3 -m pip install --upgrade humanize
    61→```
    62→
    63→### From source
    65→```bash
      →…
    71→## Usage
    73→### Integer humanization
    75→```pycon
    76→>>> import humanize
    77→>>> humanize.intcomma(12345)
    78→'12,345'
    79→>>> humanize.intword(123455913)
    80→'123.5 million'
    81→>>> humanize.intword(12345591313)
    82→'12.3 billion'
    83→>>> humanize.apnumber(4)
    84→'four'
    85→>>> humanize.apnumber(41)
    86→'41'
    87→```
    88→
    89→### Date & time humanization
    91→```pycon
      →…
   110→### Precise time delta
   112→```pycon
      →…
   124→#### Smaller units
   126→If seconds are too large, set `minimum_unit` to milliseconds or microseconds:
   127→
   128→```pycon
   129→>>> import humanize
   130→>>> import datetime as dt
   131→>>> humanize.naturaldelta(dt.timedelta(seconds=2))
   132→'2 seconds'
   133→```
   134→
   135→```pycon
      →…
   154→### File size humanization
   156→```pycon
      →…
   166→### Human-readable floating point numbers
   168→```pycon
      →…
   182→### Scientific notation
   184→```pycon
      →…
   200→## Localization
   202→How to change locale at runtime:
   203→
   204→```pycon
   205→>>> import humanize
   206→>>> import datetime as dt
   207→>>> humanize.naturaltime(dt.timedelta(seconds=3))
   208→'3 seconds ago'
   209→>>> _t = humanize.i18n.activate("ru_RU")
   210→>>> humanize.naturaltime(dt.timedelta(seconds=3))
   211→'3 секунды назад'
   212→>>> humanize.i18n.deactivate()
   213→>>> humanize.naturaltime(dt.timedelta(seconds=3))
   214→'3 seconds ago'
   215→```
   216→
      →…
RELEASING.md
     1→# Release checklist …
docs/filesize.md
     1→# Filesize
     3→::: humanize.filesize
docs/i18n.md
     1→# Internationalisation
     3→::: humanize.i18n
docs/index.md
     1→# humanize
     3→Welcome to the humanize API reference.
     4→
     5→- [Number](number.md)
     6→- [Time](time.md)
     7→- [Filesize](filesize.md)
     8→- [Lists](lists.md)
     9→- [I18n](i18n.md)
    10→
    11→{%
    12→   include-markdown "../README.md"
    13→   start="<!-- usage-start -->"
    14→   end="<!-- usage-end -->"
    15→   comments=false
    16→%}
docs/lists.md
     1→# Lists
     3→::: humanize.lists
docs/number.md
     1→# Number
     3→::: humanize.number
docs/time.md
     1→# Time
     3→::: humanize.time
src/humanize/__init__.py
    28→__all__ = [
    29→    "__version__",
    30→    "activate",
    31→    "apnumber",
    32→    "clamp",
      →…
src/humanize/i18n.py
     8→TYPE_CHECKING = False
    13→__all__ = ["activate", "deactivate", "decimal_separator", "thousands_separator"]
    15→_TRANSLATIONS: dict[str | None, gettext_module.NullTranslations] = {
    16→    None: gettext_module.NullTranslations()
    17→}
    18→_CURRENT = local()
    21→# Mapping of locale to thousands separator
    22→_THOUSANDS_SEPARATOR = {
    23→    "de_DE": ".",
      →…
    30→# Mapping of locale to decimal separator
    31→_DECIMAL_SEPARATOR = {
    32→    "de_DE": ",",
      →…
src/humanize/lists.py
     5→TYPE_CHECKING = False
     9→__all__ = ["natural_list"]
src/humanize/number.py
    12→TYPE_CHECKING = False
src/humanize/time.py
    15→TYPE_CHECKING = False
    21→__all__ = [
    22→    "naturaldate",
    23→    "naturalday",
    24→    "naturaldelta",
    25→    "naturaltime",
      →…
    30→@total_ordering
    31→class Unit(Enum):
    32→    MICROSECONDS = 0
    33→    MILLISECONDS = 1
    34→    SECONDS = 2
    35→    MINUTES = 3
    36→    HOURS = 4
    37→    DAYS = 5
    38→    MONTHS = 6
    39→    YEARS = 7
    40→
    41→    def __lt__(self, other: Any) -> Any:
    42→        if self.__class__ is other.__class__:
    43→            return self.value < other.value
    44→        return NotImplemented
