tests/snapshots/snapshots__budget_humanize_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (6 words)

__init__.py
filesize.py
i18n.py
lists.py
number.py
time.py
