tests/snapshots/snapshots__budget_humanize_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 20 → level 0 (14 words)

README.md
RELEASING.md
docs/filesize.md
docs/i18n.md
docs/index.md
docs/lists.md
docs/number.md
docs/time.md
src/humanize/__init__.py
src/humanize/filesize.py
src/humanize/i18n.py
src/humanize/lists.py
src/humanize/number.py
src/humanize/time.py
