tests/snapshots/snapshots__budget_humanize_root_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 120 → level 1 (73 words)

README.md
     1→# humanize
    49→## API reference
    55→## Installation
    57→### From PyPI
    63→### From source
    71→## Usage
    73→### Integer humanization
    89→### Date & time humanization
   110→### Precise time delta
   124→#### Smaller units
   154→### File size humanization
   166→### Human-readable floating point numbers
   182→### Scientific notation
   200→## Localization
RELEASING.md
     1→# Release checklist
docs/filesize.md
     1→# Filesize
docs/i18n.md
     1→# Internationalisation
docs/index.md
     1→# humanize
docs/lists.md
     1→# Lists
docs/number.md
     1→# Number
docs/time.md
     1→# Time
src/humanize/__init__.py
src/humanize/filesize.py
src/humanize/i18n.py
src/humanize/lists.py
src/humanize/number.py
src/humanize/time.py
