tests/snapshots/snapshots__budget_humanize_src_humanize_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1009 tokens)

__init__.py
    26→from ._version import __version__
    28→__all__ = [

filesize.py
     5→from math import log
    36→def naturalsize(
    37→    value: float | str,
    38→    binary: bool = False,
    39→    gnu: bool = False,
    40→    format: str = "%.1f",
    41→) -> str:
    42→    """Format a number of bytes like a human-readable filesize (e.g. 10 kB).
    43→
    44→    By default, decimal suffixes (kB, MB) are used.
    45→
    46→    Non-GNU modes are compatible with jinja2's `filesizeformat` filter.
    47→
    48→    Examples:
    49→        ```pycon
      →        …

i18n.py
     5→import gettext as gettext_module
     6→from threading import local
     8→TYPE_CHECKING = False
    10→    import os
    11→    import pathlib
    13→__all__ = ["activate", "deactivate", "decimal_separator", "thousands_separator"]
    15→_TRANSLATIONS: dict[str | None, gettext_module.NullTranslations] = {
    18→_CURRENT = local()
    21→# Mapping of locale to thousands separator
    22→_THOUSANDS_SEPARATOR = {
    30→# Mapping of locale to decimal separator
    31→_DECIMAL_SEPARATOR = {
    51→def get_translation() -> gettext_module.NullTranslations:
    58→def activate(
    59→    locale: str | None, path: str | os.PathLike[str] | None = None
    60→) -> gettext_module.NullTranslations:
    61→    """Activate internationalisation.
    62→
      →…
    96→def deactivate() -> None:
    97→    """Deactivate internationalisation."""
   183→def thousands_separator() -> str:
   184→    """Return the thousands separator for a locale, default to comma.
   185→
      →…
   196→def decimal_separator() -> str:
   197→    """Return the decimal separator for a locale, default to dot.
   198→
      →…

lists.py
     5→TYPE_CHECKING = False
     7→    from typing import Any
     9→__all__ = ["natural_list"]
    12→def natural_list(items: list[Any]) -> str:
    13→    """Natural list.
    14→
    15→    Convert a list of items into a human-readable string with commas and 'and'.
    16→
    17→    Examples:
      →    …

number.py
     5→import bisect
     7→from .i18n …
     8→from .i18n …
     9→from .i18n …
    10→from .i18n …
    12→TYPE_CHECKING = False
    14→    from typing import TypeAlias
    21→def _format_not_finite(value: float) -> str:
    22→    """Utility function to handle infinite and nan cases."""
    34→def ordinal …
   110→def intcomma …
   195→def intword …
   269→def apnumber …
   321→def fractional …
   385→def scientific …
   454→def clamp …
   531→def metric …

time.py
    11→from .i18n import _gettext as _
    12→from .i18n import _ngettext
    13→from .number import intcomma
    15→TYPE_CHECKING = False
    21→__all__ = [
    30→@total_ordering
    31→class Unit(Enum):
    32→    MICROSECONDS = 0
    33→    MILLISECONDS = 1
    34→    SECONDS = 2
    35→    MINUTES = 3
    36→    HOURS = 4
    37→    DAYS = 5
    38→    MONTHS = 6
    39→    YEARS = 7
    40→
    41→    def __lt__ …
    95→def naturaldelta …
   249→def naturaltime …
   311→def naturalday …
   343→def naturaldate …
   451→def precisedelta …
